[gd_scene load_steps=27 format=2]

[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run7.png" type="Texture" id=1]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run5.png" type="Texture" id=2]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run6.png" type="Texture" id=3]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run3.png" type="Texture" id=4]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_jump2.png" type="Texture" id=5]
[ext_resource path="res://mini-game/scenes/players/player.gd" type="Script" id=6]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run0.png" type="Texture" id=7]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run4.png" type="Texture" id=8]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run2.png" type="Texture" id=9]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_run1.png" type="Texture" id=10]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_jump1.png" type="Texture" id=11]
[ext_resource path="res://mini-game/ressources/sprites/player/dino/dino_jump0.png" type="Texture" id=12]
[ext_resource path="res://mini-game/ressources/sprites/player/man/9_2.png" type="Texture" id=13]
[ext_resource path="res://mini-game/ressources/sprites/player/man/4.png" type="Texture" id=14]
[ext_resource path="res://mini-game/ressources/sprites/player/man/2.png" type="Texture" id=15]
[ext_resource path="res://mini-game/ressources/sprites/player/man/9_4.png" type="Texture" id=16]
[ext_resource path="res://mini-game/ressources/sprites/player/man/9_3.png" type="Texture" id=17]
[ext_resource path="res://mini-game/ressources/sprites/player/man/1.png" type="Texture" id=18]
[ext_resource path="res://mini-game/ressources/sprites/player/man/6.png" type="Texture" id=19]
[ext_resource path="res://mini-game/ressources/sprites/player/man/7.png" type="Texture" id=20]
[ext_resource path="res://mini-game/ressources/sprites/player/man/9_1.png" type="Texture" id=21]
[ext_resource path="res://mini-game/ressources/sprites/plus1.png" type="Texture" id=22]
[ext_resource path="res://mini-game/ressources/sounds/drop_004.wav" type="AudioStream" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 17 ) ],
"loop": true,
"name": "man_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 16 ) ],
"loop": true,
"name": "man_jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.46927, 10.285 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.82863, 6.33675 )

[node name="player" type="KinematicBody2D"]
scale = Vector2( 10, 10 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.76303, -0.98938 )
scale = Vector2( 0.0421291, 0.0421291 )
frames = SubResource( 1 )
animation = "man_jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0396847, -0.480505 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.0400658, 9.23466 )
scale = Vector2( 0.609429, 0.281311 )
shape = SubResource( 3 )

[node name="BonusControl" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="BonusControl"]
position = Vector2( 0, -15 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 22 )

[node name="Tween" type="Tween" parent="BonusControl"]

[node name="Timer" type="Timer" parent="BonusControl"]
wait_time = 1.5

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="BonusControl/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
